--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="2015-plan.jpg" alt="2015-plan" width="100%"/>
+a href="2015-plan.jpg"><img src="2015-plan.jpg" alt="2015-plan" width="100%"/></a>
