--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="2015-plan.jpg"><img src="2015-plan.jpg" alt="2015-plan" width="100%"/></a>
+<a target="_blank" href="2015-plan.jpg"><img src="2015-plan.jpg" alt="2015-plan" width="100%"/></a>
