--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a target="_blank" href="2015-plan.jpg"><img src="2015-plan.jpg" alt="2015-plan" width="100%"/></a>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+	<meta name="永康市对外经贸展览有限公司,2015年展览计划" charset="UTF-8">
+	<title>永康市对外经贸展览有限公司</title>
+</head>
+<body>
+<a target="_blank" href="2015-plan.jpg"><img src="2015-plan.jpg" alt="2015-plan" width="100%"/></a>	
+</body>
+</html>
