--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-	<meta name="永康市对外经贸展览有限公司,2015年展览计划" charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="keywords" content="永康市对外经贸展览有限公司,2015年展览计划" >
+	<meta name="description" content="永康市对外经贸展览有限公司,2015年展览计划">
 	<title>永康市对外经贸展览有限公司</title>
 </head>
 <body>
